--- a/hey.html
+++ b/hey.html
@@ -2,7 +2,7 @@
     <head>
         <title>TP Web - HTML - CSS (Header)</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
-        <link rel="icon" type="images/png" href="/sus/images/logo.png">
+        <link rel="icon" type="images/png" href="images/logo.png">
     </head>
     <body>
         <script src="ja.js" type="text/javascript"></script>
@@ -25,7 +25,7 @@
             <li><a href="#"><i>Offres</i></a></li>
             <li><a href="#"><i>Nos agences</i></a></li>
             <li><a href="#"><i>Produits</i></a></li>
-            <li><a href="index.html"><i>Accueil</i></a></li>
+            <li><a href="hey.html"><i>Accueil</i></a></li>
          </ul>
         </div>
     </body>
